Listening to Screen On/Off events * start listening on boot complete * provide buttons in activity GUI to start/stop listener service * just log screen status for now.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,6 +11,20 @@
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"/>
+    <Button
+        android:id="@+id/start_button"
+        android:text="@string/start_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"/>
+    <Button
+        android:id="@+id/stop_button"
+        android:text="@string/stop_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/start_button"
+        android:layout_toRightOf="@+id/start_button"/>
 
 </RelativeLayout>
