--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,16 +9,38 @@
     tools:context="com.yulingliang.app.android.MainActivity$PlaceholderFragment">
 
     <TextView
+        android:id="@+id/today"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"/>
+        android:textSize="25dp"
+        android:fontFamily="sans-serif-light"/>
+    <TextView
+        android:id="@+id/num_screen_on"
+        android:text="Screen On:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/today"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:fontFamily="sans-serif-light"/>
+    <TextView
+        android:id="@+id/num_actual_use"
+        android:text="Actually use the phone:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/num_screen_on"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:fontFamily="sans-serif-light"/>
     <Button
         android:id="@+id/start_button"
         android:text="@string/start_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
     <Button
         android:id="@+id/stop_button"
         android:text="@string/stop_service"
@@ -26,5 +48,12 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/start_button"
         android:layout_toRightOf="@+id/start_button"/>
+    <Button
+        android:id="@+id/reset_stat_button"
+        android:text="@string/reset_stats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/start_button"
+        android:layout_toRightOf="@+id/stop_button"/>
 
 </RelativeLayout>
